--- a/WorldTok/Base.lproj/Main.storyboard
+++ b/WorldTok/Base.lproj/Main.storyboard
@@ -1,24 +1,105 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1sY-w7-A4E">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--World Tok-->
+        <scene sceneID="z6R-cU-nNA">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <tableViewController id="OIp-9e-W0B" customClass="HomeScreen" customModule="WorldTok" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="VvA-Ei-48h">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" systemColor="systemGroupedBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="timeCell" rowHeight="150" id="0si-Er-QiK" customClass="TimeTableViewCell" customModule="WorldTok" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="150"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0si-Er-QiK" id="qab-Ch-oVH">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="18:54:55" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="d4Y-9c-kqo">
+                                            <rect key="frame" x="246" y="21" width="148" height="108"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="38"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="fus-GZ-MFd">
+                                            <rect key="frame" x="20" y="21" width="178.5" height="108"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Calcutta" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ss3-my-5ST">
+                                                    <rect key="frame" x="0.0" y="0.0" width="88.5" height="53"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="22"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The Same day as you" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="g2g-f5-oFx">
+                                                    <rect key="frame" x="0.0" y="55" width="178.5" height="53"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="18"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="d4Y-9c-kqo" firstAttribute="trailing" secondItem="qab-Ch-oVH" secondAttribute="trailingMargin" id="8Wd-G5-rY4"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="fus-GZ-MFd" secondAttribute="bottom" constant="10" id="8v3-NY-iey"/>
+                                        <constraint firstItem="fus-GZ-MFd" firstAttribute="leading" secondItem="qab-Ch-oVH" secondAttribute="leadingMargin" id="G0n-Vc-PtJ"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="d4Y-9c-kqo" secondAttribute="bottom" constant="10" id="NER-SR-jgf"/>
+                                        <constraint firstItem="fus-GZ-MFd" firstAttribute="top" secondItem="qab-Ch-oVH" secondAttribute="topMargin" constant="10" id="Plr-bj-sQW"/>
+                                        <constraint firstItem="d4Y-9c-kqo" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="fus-GZ-MFd" secondAttribute="trailing" constant="8" symbolic="YES" id="aJC-BS-1B3"/>
+                                        <constraint firstItem="d4Y-9c-kqo" firstAttribute="top" secondItem="qab-Ch-oVH" secondAttribute="topMargin" constant="10" id="unp-Sm-jVH"/>
+                                        <constraint firstItem="fus-GZ-MFd" firstAttribute="centerY" secondItem="qab-Ch-oVH" secondAttribute="centerY" id="xQn-Ya-DaS"/>
+                                        <constraint firstItem="d4Y-9c-kqo" firstAttribute="centerY" secondItem="qab-Ch-oVH" secondAttribute="centerY" id="xyW-sL-nYb"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="cityLabel" destination="Ss3-my-5ST" id="pNW-lU-W41"/>
+                                    <outlet property="currentTimeLabel" destination="d4Y-9c-kqo" id="6VM-av-bxX"/>
+                                    <outlet property="dayDifferenceLabel" destination="g2g-f5-oFx" id="6gr-vZ-mgy"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="OIp-9e-W0B" id="DfC-90-P5W"/>
+                            <outlet property="delegate" destination="OIp-9e-W0B" id="iPH-2J-7et"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="World Tok" id="YYS-Fl-ySR">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="plus.circle" catalog="system" id="9AN-pQ-3fR">
+                            <color key="tintColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="org-bm-SU7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1065.217391304348" y="110.49107142857143"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ajt-go-jYU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1sY-w7-A4E" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="xSr-po-EgT">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="OIp-9e-W0B" kind="relationship" relationship="rootViewController" id="B3P-ck-Qja"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tNX-MP-QgX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="155.07246376811597" y="110.49107142857143"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="plus.circle" catalog="system" width="64" height="60"/>
+    </resources>
 </document>
